[package]
name = "stylus-hello-world"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.2.0"
hex = "0.4.3"
wee_alloc = "0.4.5"
rand = { version = "0.8.5", features = ["small_rng"] }
base64 = "0.21.3"
image = { version = "0.24.7", default-features = false, features = ["png"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }  # 'full' feature enables all the available features.
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
